feat(Account): Implements deposit endpoint with idempotency
