# src/main/java/org/girardsimon/wealthpay/account/application/response/TransactionStatus.java
@@ -1,0 +1,6 @@
+package org.girardsimon.wealthpay.account.application.response;
+
+public enum TransactionStatus {
+  COMMITTED,
+  NO_EFFECT
+}
